k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: backend
          image: faisalaldarees/backend
          command: ["gunicorn", "--workers", "1", "--bind", ":8000", "--log-level", "INFO", "profile_dev.wsgi:application"]
          ports:
            - containerPort: 8000
