k8s/beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-beat
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery-beat
  template:
    metadata:
      labels:
        component: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: faisalaldarees/backend
          command: ["celery", "-A", "profile_dev", "worker", "-l", "info"]
