k8s/migrate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: migrate
spec:
  replicas: 1
  selector:
    matchLabels:
      component: migrate
  template:
    metadata:
      labels:
        component: migrate
    spec:
      containers:
        - name: migrate
          image: faisalaldarees/backend
          command: ["python", "manage.py", "migrate"]
