k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      component: celery-worker
  template:
    metadata:
      labels:
        component: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: faisalaldarees/backend
          command: ["celery", "-A", "profile_dev", "worker", "-l", "info"]
